crates/apollo_storage/src/serialization/snapshots/apollo_storage__serialization__serializers_test__hints_regression_hint_222.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 222
- 1
- 14
- 0
- 0
- 2
- 2
- 130
- 134
- 36
- 0
- 1
- 250
- 255
- 0
- 0
- 0
