crates/apollo_storage/src/serialization/snapshots/apollo_storage__serialization__serializers_test__hints_regression_hint_2530.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 9
- 226
- 1
- 14
- 0
- 0
- 1
- 0
- 1
- 253
- 255
- 2
- 130
- 0
- 1
- 0
- 0
- 0
