crates/apollo_storage/src/serialization/snapshots/apollo_storage__serialization__serializers_test__hints_regression_hint_2534.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 9
- 230
- 1
- 49
- 0
- 0
- 9
- 0
- 0
- 255
- 255
- 2
- 144
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 17
- 0
- 0
- 0
- 0
- 0
- 0
- 8
- 2
- 144
- 254
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 0
- 0
- 0
- 0
- 1
- 0
